# KK

./: .gitignore  CMakeLists.txt  inputGramm.json  inputGramm2.json  inputGramm3.json  inputGramm4.json  main.cpp
FA/: DFA.cpp  DFA.h  NFA.cpp  NFA.h  trans.h
gram/: Equation.cpp  Equation.h  EquationSystem.cpp  EquationSystem.h  GramSymbol.h  Gramatic.cpp  Gramatic.h  NotTerminal.h  Terminal.h
regexp/: RegExpression.cpp  RegExpression.h
